// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 2`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/resolve-url-loader",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass-loader",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass",
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 3`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/less-loader",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "node_modules",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              [Function],
              [Function],
              [Function],
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 2`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              [Function],
              [Function],
              [Function],
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/resolve-url-loader",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass-loader",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass",
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 3`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              [Function],
              [Function],
              [Function],
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/less-loader",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "node_modules",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;
